# zettelkasten_id_generator

./: Cargo.toml
src/: main.rs
