[package]
name = "zettelkasten_id_generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zid-generator"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
radix_fmt = "1.0.0"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4.31"
anyhow = "1.0"
